# Game-Game-Engine-From-Scratch

./: CMakeLists.txt  ZhiRong_Fu_Fall_24.sln
Jelly/: CMakeLists.txt  EntryPoint.h  Image.cpp  Image.h  ImageImpl.h  Jelly.vcxproj  Jelly.vcxproj.filters  JellyApplication.cpp  JellyApplication.h  JellyEvents.cpp  JellyEvents.h  JellyUtilities.h  JellyWindow.cpp  JellyWindow.h  KeyCodes.h  Renderer.cpp  Renderer.h  RendererImpl.h  Shaders.cpp  Shaders.h  ShadersImpl.h  Unit.cpp  Unit.h  WindowImpl.h  pch.h
Jelly/JellyAssets/Shaders/: defaultFragmentShader.glsl  defaultVertexShader.glsl
Jelly/codeGLFW/: WindowGLFW.cpp  WindowGLFW.h
Jelly/codeOpenGL/: OpenGLImage.cpp  OpenGLImage.h  OpenGLRenderer.cpp  OpenGLRenderer.h  OpenGLShaders.cpp  OpenGLShaders.h
Jelly/include/: EntryPoint.h  Jelly.h
MyGame/: Alien.cpp  Alien.h  Bullet.cpp  Bullet.h  CMakeLists.txt  MyGame.cpp  MyGame.vcxproj  MyGame.vcxproj.filters
glad/: CMakeLists.txt  glad.vcxproj
glad/include/glad/: glad.h
glad/src/: glad.c
glfw_build/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  F24_ZhiRong_Fu.sln  GLFW.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  cmake_uninstall.cmake
glfw_build/Jelly/: Jelly.vcxproj  Jelly.vcxproj.filters  cmake_install.cmake
glfw_build/MyGame/: MyGame.vcxproj  MyGame.vcxproj.filters  cmake_install.cmake
glfw_build/src/: cmake_install.cmake  glfw.rc  glfw.vcxproj  glfw.vcxproj.filters  glfw3.pc  update_mappings.vcxproj  update_mappings.vcxproj.filters
glfw_build/src/Debug/: glfw3dll.exp
glfw_build/src/glfw.dir/Debug/: glfw.res  glfw3.dll.recipe  glfw3.ilk
glfw_build/src/glfw.dir/Debug/glfw.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  glfw.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
stbi/: stbi.vcxproj
